# boomerbill

./: .gitignore  AGENT_LAUNCH_PLAYBOOK.md  CHANGELOG.md  DEPLOY_CLOUD.md  DEPLOY_VPS.md  DEVLOG.md  DEVLOG.ms  FOSS_BUSINESS_MARKETING_PLAN.md  GO_LIVE_RUNBOOK.md  LICENSE  README  README.md  boomerbill-logs.txt  docker-compose.override.yml  docker-compose.yml  netlify.toml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DECISION_LOG.md  Dockerfile  README.md  SECURITY_RUNBOOK.md  fly.toml  pyproject.toml
backend/core/: db.sqlite3
backend/core/boomers/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/core/boomers/migrations/: 0001_initial.py  0002_boomer_cost.py  0003_category_is_shared_category_normalized_name_and_more.py  0004_add_performance_indexes.py
backend/core/community/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/community/management/commands/: seed_dummy_data.py
backend/core/community/migrations/: 0001_initial.py  0002_messagereply.py  0003_add_performance_indexes.py
backend/core/core/: health_views.py  settings.py  urls.py
backend/core/users/: serializers.py  tests.py  urls.py  views.py
backend/scripts/: benchmark.py  entrypoint.sh  fly-release.sh  fly-secrets-from-env.sh
business/: avatar.yml  business-plan.md  market-analysis.md  marketing-plan.md
feture/: enhance-dashboard.md
frontend/: .gitignore  API_ENDPOINT_CONFIG.md  DEVLOG.md  README.md  astro.config.mjs  devlog.md  package-lock.json  package.json  playwright.config.ts  (+1 more)
(+103 files in other folders)
